--- a/our-own-way.html
+++ b/our-own-way.html
@@ -830,7 +830,7 @@ body{--wp--preset--color--black: #000000;--wp--preset--color--cyan-bluish-gray: 
                 <div class="col text-center h2">
                     If our way is your way,<br>
                     <a
-                        href="https://bigbets.tech/contact">we want to meet you</a>.
+                        href="https://eduardoroblesespinosa.github.io/big-bets/contact">we want to meet you</a>.
                 </div>
             </div>
         </div>
