--- a/index.html
+++ b/index.html
@@ -160,23 +160,23 @@ body{--wp--preset--color--black: #000000;--wp--preset--color--cyan-bluish-gray: 
     <div class="col-2 col align-center">
         <ul class="bb-menu bb-menu--main">
             <li class="bb-menu-item">
-                <a href="https://bigbets.tech"
+                <a href="https://eduardoroblesespinosa.github.io/big-bets/"
                     class="bb-menu-link hoverable active">home</a>
             </li>
             <li class="bb-menu-item">
-                <a href="https://bigbets.tech/our-own-way"
+                <a href="https://eduardoroblesespinosa.github.io/big-bets/our-own-way"
                     class="bb-menu-link hoverable ">our own way</a>
             </li>
             <li class="bb-menu-item">
-                <a href="https://bigbets.tech/our-team"
+                <a href="https://eduardoroblesespinosa.github.io/big-bets/our-team"
                     class="bb-menu-link hoverable ">our team</a>
             </li>
             <li class="bb-menu-item">
-                <a href="https://bigbets.tech/our-partners"
+                <a href="https://eduardoroblesespinosa.github.io/big-bets/our-partners"
                     class="bb-menu-link hoverable ">our partners</a>
             </li>
             <li class="bb-menu-item">
-                <a href="https://bigbets.tech/napkin-en"
+                <a href="https://eduardoroblesespinosa.github.io/big-bets/napkin-en"
                     class="bb-menu-link hoverable ">Napkin</a>
             </li>
         </ul>
