--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@ body{--wp--preset--color--black: #000000;--wp--preset--color--cyan-bluish-gray: 
     <div class="col align-end">
         <ul class="bb-menu bb-menu--secondary">
             <li class="bb-menu-item">
-                <a href="https://bigbets.tech/clipping"
+                <a href="https://eduardoroblesespinosa.github.io/big-bets/clipping"
                     class="bb-menu-link hoverable ">clipping</a>
             </li>
         </ul>
@@ -195,7 +195,7 @@ body{--wp--preset--color--black: #000000;--wp--preset--color--cyan-bluish-gray: 
         <ul class="bb-menu bb-menu--secondary">
 
             <li class="bb-menu-item">
-                <a href="https://bigbets.tech/contact"
+                <a href="https://eduardoroblesespinosa.github.io/big-bets/contact"
                     class="bb-menu-link hoverable ">contact</a>
             </li>
         </ul>
