--- a/our-own-way.html
+++ b/our-own-way.html
@@ -162,23 +162,23 @@ body{--wp--preset--color--black: #000000;--wp--preset--color--cyan-bluish-gray: 
     <div class="col-2 col align-center">
         <ul class="bb-menu bb-menu--main">
             <li class="bb-menu-item">
-                <a href="https://bigbets.tech"
+                <a href="https://eduardoroblesespinosa.github.io/big-bets/"
                     class="bb-menu-link hoverable ">home</a>
             </li>
             <li class="bb-menu-item">
-                <a href="https://bigbets.tech/our-own-way"
+                <a href="https://eduardoroblesespinosa.github.io/big-bets/our-own-way"
                     class="bb-menu-link hoverable active">our own way</a>
             </li>
             <li class="bb-menu-item">
-                <a href="https://bigbets.tech/our-team"
+                <a href="https://eduardoroblesespinosa.github.io/big-bets/our-team"
                     class="bb-menu-link hoverable ">our team</a>
             </li>
             <li class="bb-menu-item">
-                <a href="https://bigbets.tech/our-partners"
+                <a href="https://eduardoroblesespinosa.github.io/big-bets/our-partners"
                     class="bb-menu-link hoverable ">our partners</a>
             </li>
             <li class="bb-menu-item">
-                <a href="https://bigbets.tech/napkin-en"
+                <a href="https://eduardoroblesespinosa.github.io/big-bets/napkin-en"
                     class="bb-menu-link hoverable ">Napkin</a>
             </li>
         </ul>
@@ -187,7 +187,7 @@ body{--wp--preset--color--black: #000000;--wp--preset--color--cyan-bluish-gray: 
     <div class="col align-end">
         <ul class="bb-menu bb-menu--secondary">
             <li class="bb-menu-item">
-                <a href="https://bigbets.tech/clipping"
+                <a href="https://eduardoroblesespinosa.github.io/big-bets/clipping"
                     class="bb-menu-link hoverable ">clipping</a>
             </li>
         </ul>
@@ -197,7 +197,7 @@ body{--wp--preset--color--black: #000000;--wp--preset--color--cyan-bluish-gray: 
         <ul class="bb-menu bb-menu--secondary">
 
             <li class="bb-menu-item">
-                <a href="https://bigbets.tech/contact"
+                <a href="https://eduardoroblesespinosa.github.io/big-bets/contact"
                     class="bb-menu-link hoverable ">contact</a>
             </li>
         </ul>
