--- a/napkin-en.html
+++ b/napkin-en.html
@@ -109,7 +109,7 @@ body{--wp--preset--color--black: #000000;--wp--preset--color--cyan-bluish-gray: 
 
     <header class="bb-header">
     <div class="bb-header__col">
-        <a href="https://bigbets.tech/" title="Go to homepage">
+        <a href="https://eduardoroblesespinosa.github.io/big-bets/" title="Go to homepage">
             <svg id="logo" xmlns="http://www.w3.org/2000/svg" width="155.199" height="39.154"
                 viewBox="0 0 155.199 39.154">
                 <g transform="translate(1 -3)">
