--- a/napkin-en.html
+++ b/napkin-en.html
@@ -167,19 +167,19 @@ body{--wp--preset--color--black: #000000;--wp--preset--color--cyan-bluish-gray: 
                     class="bb-menu-link hoverable ">home</a>
             </li>
             <li class="bb-menu-item">
-                <a href="https://eduardoroblesespinosa.github.io/big-bets/our-own-way/"
+                <a href="https://eduardoroblesespinosa.github.io/big-bets/our-own-way"
                     class="bb-menu-link hoverable ">our own way</a>
             </li>
             <li class="bb-menu-item">
-                <a href="https://eduardoroblesespinosa.github.io/big-bets/our-team/"
+                <a href="https://eduardoroblesespinosa.github.io/big-bets/our-team"
                     class="bb-menu-link hoverable ">our team</a>
             </li>
             <li class="bb-menu-item">
-                <a href="https://eduardoroblesespinosa.github.io/big-bets/our-partners/"
+                <a href="https://eduardoroblesespinosa.github.io/big-bets/our-partners"
                     class="bb-menu-link hoverable ">our partners</a>
             </li>
             <li class="bb-menu-item">
-                <a href="https://eduardoroblesespinosa.github.io/big-bets/napkin-en/"
+                <a href="https://eduardoroblesespinosa.github.io/big-bets/napkin-en"
                     class="bb-menu-link hoverable active">Napkin</a>
             </li>
         </ul>
