--- a/our-team.html
+++ b/our-team.html
@@ -161,11 +161,11 @@ body{--wp--preset--color--black: #000000;--wp--preset--color--cyan-bluish-gray: 
                     class="bb-menu-link hoverable ">home</a>
             </li>
             <li class="bb-menu-item">
-                <a href="https://eduardoroblesespinosa.github.io/big-bets/our-own-way/"
+                <a href="https://eduardoroblesespinosa.github.io/big-bets/our-own-way"
                     class="bb-menu-link hoverable ">our own way</a>
             </li>
             <li class="bb-menu-item">
-                <a href="https://eduardoroblesespinosa.github.io/big-bets/our-team/"
+                <a href="https://eduardoroblesespinosa.github.io/big-bets/our-team"
                     class="bb-menu-link hoverable active">our team</a>
             </li>
             <li class="bb-menu-item">
